# sentinel

./: .env.example  .gitignore  BUGS.md  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml
contracts/: build.sh
contracts/diagnostic-contract/: Cargo.toml
contracts/diagnostic-contract/src/: lib.rs
contracts/diagnostic-contract/wit/: world.wit
contracts/minimal-contract/: Cargo.toml
contracts/minimal-contract/src/: lib.rs
contracts/minimal-contract/wit/: world.wit
contracts/sentinel-contract/: Cargo.toml
contracts/sentinel-contract/src/: audit.rs  compliance.rs  lib.rs  receipt.rs
contracts/sentinel-contract/wit/: world.wit
scripts/: 03-deploy-contract.ts  04-seed-policies.ts  05-run-demo.ts  06-seed-governance.ts  07-view-governance.ts  08-reset-governance.ts  09-clear-spend-ledger.ts  10-update-cap.ts  check-sdk.ts  debug2.mjs  generate-voiceover.py  setup.ts  test-policy.ts  verify-receipt-standalone.ts
v0-unzipped/: package-lock.json  tsconfig.json
v0-unzipped/scripts/: 05-run-demo.ts  generate-agent-keys.ts  setup.ts
