[package]
name = "sentinel-compliance"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
